--- a/recipe.html
+++ b/recipe.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group" id="iframeForm">
                     </div>
-                    <input type="submit" id="payment_source" name="payment_source">
+                    <input type="hidden" id="payment_source" name="payment_source">
                 </form>
             </div>
         </div>
